--- a/s_curve.ipynb
+++ b/s_curve.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,16 +38,35 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "x = np.concatenate( (x[:275], x[300:]) )\n",
-    "y = np.concatenate( (y[:275], y[300:]) )"
+    "x = np.concatenate( (x[:300], x[300:]) )\n",
+    "y = np.concatenate( (y[:300], y[300:]) )"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b0b135f5c7c64c1086c5df074ad888ad",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "fig = plt.figure()\n",
     "ax = fig.add_subplot( 111, projection='3d' )\n",
@@ -62,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,10 +89,13 @@
     "    isomap = manifold.Isomap( n_neighbors=n_neighbors, n_components=n_components )\n",
     "    y_isomap = isomap.fit_transform( x )\n",
     "    \n",
-    "    lle = manifold.LocallyLinearEmbedding( n_neighbors=10, n_components=2 )\n",
+    "    lle = manifold.LocallyLinearEmbedding( n_neighbors=n_neighbors, n_components=n_components )\n",
     "    y_lle = lle.fit_transform( x )\n",
     "    \n",
-    "    fig, (ax1, ax2) = plt.subplots( 1, 2 )\n",
+    "    laplace = manifold.SpectralEmbedding( n_neighbors=n_neighbors, n_components=n_components )\n",
+    "    y_laplace = laplace.fit_transform( x )\n",
+    "    \n",
+    "    fig, (ax1, ax2 ) = plt.subplots( 1, 2 )\n",
     "    \n",
     "    x1_vals = y_isomap[:, 0]\n",
     "    y1_vals = y_isomap[:, 1]\n",
@@ -82,6 +104,11 @@
     "    x2_vals = y_lle[:, 0]\n",
     "    y2_vals = y_lle[:, 1] \n",
     "    ax2.scatter( x2_vals, y2_vals, c=y )\n",
+    "    \n",
+    "#     x3_vals = y_laplace[:, 0]\n",
+    "#     y3_vals = y_laplace[:, 1]\n",
+    "#     ax3.scatter( x3_vals, y3_vals, c=y )\n",
+    "    \n",
     "    plt.plot()\n",
     "    return (y_isomap, y_lle)\n",
     "    \n",
@@ -98,7 +125,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e0df7883104144cc98d182a6a02b47c5",
+       "model_id": "5a9de1b60aac4663b6d08848522b29e6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -115,33 +142,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 52,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1.        ,  0.99838095,  0.91752127, ..., -0.71136582,\n",
-       "        -0.70698964, -0.71887795],\n",
-       "       [ 0.99838095,  1.        ,  0.93565517, ..., -0.71975558,\n",
-       "        -0.71578165, -0.72654041],\n",
-       "       [ 0.91752127,  0.93565517,  1.        , ..., -0.76961674,\n",
-       "        -0.76886612, -0.77022222],\n",
-       "       ...,\n",
-       "       [-0.71136582, -0.71975558, -0.76961674, ...,  1.        ,\n",
-       "         0.99984726,  0.99931523],\n",
-       "       [-0.70698964, -0.71578165, -0.76886612, ...,  0.99984726,\n",
-       "         1.        ,  0.99872934],\n",
-       "       [-0.71887795, -0.72654041, -0.77022222, ...,  0.99931523,\n",
-       "         0.99872934,  1.        ]])"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "# AVALIACAO\n",
     "# matriz de distancias original\n",
