--- a/s_curve.ipynb
+++ b/s_curve.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,13 @@
     "\n",
     "idx = y.argsort()\n",
     "y.sort()\n",
-    "x = x[idx]"
+    "x = x[idx]\n",
+    "\n",
+    "# for i in range( n_samples ):\n",
+    "#     if i < n_samples / 2:\n",
+    "#         y[i] = -2.0\n",
+    "#     else:\n",
+    "#         y[i] = 2.0"
    ]
   },
   {
@@ -39,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,13 +55,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b0b135f5c7c64c1086c5df074ad888ad",
+       "model_id": "70ab2af18827471ebe782db7a48488fd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -81,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +101,10 @@
     "    laplace = manifold.SpectralEmbedding( n_neighbors=n_neighbors, n_components=n_components )\n",
     "    y_laplace = laplace.fit_transform( x )\n",
     "    \n",
-    "    fig, (ax1, ax2 ) = plt.subplots( 1, 2 )\n",
+    "    ltsa = manifold.LocallyLinearEmbedding( n_neighbors=n_neighbors, n_components=n_components, method='ltsa' )\n",
+    "    y_ltsa = ltsa.fit_transform( x )\n",
+    "    \n",
+    "    fig, (ax1, ax2, ax3, ax4 ) = plt.subplots( 1, 4 )\n",
     "    \n",
     "    x1_vals = y_isomap[:, 0]\n",
     "    y1_vals = y_isomap[:, 1]\n",
@@ -105,12 +114,16 @@
     "    y2_vals = y_lle[:, 1] \n",
     "    ax2.scatter( x2_vals, y2_vals, c=y )\n",
     "    \n",
-    "#     x3_vals = y_laplace[:, 0]\n",
-    "#     y3_vals = y_laplace[:, 1]\n",
-    "#     ax3.scatter( x3_vals, y3_vals, c=y )\n",
+    "    x3_vals = y_laplace[:, 0]\n",
+    "    y3_vals = y_laplace[:, 1]\n",
+    "    ax3.scatter( x3_vals, y3_vals, c=y )\n",
+    "    \n",
+    "    x4_vals = y_ltsa[:, 0]\n",
+    "    y4_vals = y_ltsa[:, 1]\n",
+    "    ax4.scatter( x4_vals, y4_vals, c=y )\n",
     "    \n",
     "    plt.plot()\n",
-    "    return (y_isomap, y_lle)\n",
+    "    return (y_isomap, y_lle, y_laplace, y_ltsa)\n",
     "    \n",
     "def residual_variance( dx, dy ):\n",
     "    corr = stats.spearmanr( dx, dy, axis=1 ).correlation\n",
@@ -119,13 +132,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5a9de1b60aac4663b6d08848522b29e6",
+       "model_id": "850dcad070de4e558176f4fe676b361e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -138,21 +151,7 @@
     }
    ],
    "source": [
-    "y_isomap, y_lle = fit_plot( x, y, n_neighbors=10, n_components=2 )"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# AVALIACAO\n",
-    "# matriz de distancias original\n",
-    "dx = squareform( pdist( x ) )\n",
-    "# distancias da reducao\n",
-    "dy_isomap = squareform( pdist ( y_isomap ) )\n",
-    "dy_lle = squareform( pdist ( y_lle ) )\n",
-    "\n",
-    "residual_variance( dx, dy_isomap )"
+    "y_isomap, y_lle, y_laplace, y_ltsa = fit_plot( x, y, n_neighbors=10, n_components=2 )"
    ]
   },
   {
@@ -179,7 +178,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
