--- a/s_curve.ipynb
+++ b/s_curve.ipynb
@@ -7,17 +7,19 @@
    "outputs": [],
    "source": [
     "%matplotlib widget\n",
-    "from sklearn import datasets, manifold\n",
+    "from sklearn import datasets, manifold, mixture\n",
     "import matplotlib.pyplot as plt\n",
+    "import matplotlib as mpl\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "import numpy as np\n",
     "from scipy.spatial.distance import pdist, squareform\n",
-    "from scipy import stats"
+    "from scipy import stats, linalg\n",
+    "import itertools"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,24 +30,17 @@
     "y.sort()\n",
     "x = x[idx]\n",
     "\n",
-    "# for i in range( n_samples ):\n",
-    "#     if i < n_samples / 2:\n",
-    "#         y[i] = -2.0\n",
-    "#     else:\n",
-    "#         y[i] = 2.0"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "np.savetxt('data_scurve.txt', x)\n",
-    "np.savetxt('label_scurve.txt', y)"
+    "y = []\n",
+    "for i in range( n_samples ):\n",
+    "    if i < n_samples / 2:\n",
+    "        y.append( 'purple' )\n",
+    "    else:\n",
+    "        y.append( 'blue' )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,13 +50,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "70ab2af18827471ebe782db7a48488fd",
+       "model_id": "43ca1bedf92847148ff2ae0e3ca02b58",
        "version_major": 2,
        "version_minor": 0
       },
@@ -74,8 +69,8 @@
     }
    ],
    "source": [
-    "fig = plt.figure()\n",
-    "ax = fig.add_subplot( 111, projection='3d' )\n",
+    "fig1 = plt.figure()\n",
+    "ax = fig1.add_subplot( 111, projection='3d' )\n",
     "\n",
     "x_vals = x[:, 0]\n",
     "z_vals = x[:, 1]\n",
@@ -87,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,25 +99,43 @@
     "    ltsa = manifold.LocallyLinearEmbedding( n_neighbors=n_neighbors, n_components=n_components, method='ltsa' )\n",
     "    y_ltsa = ltsa.fit_transform( x )\n",
     "    \n",
-    "    fig, (ax1, ax2, ax3, ax4 ) = plt.subplots( 1, 4 )\n",
+    "    fig = plt.figure()\n",
+    "    gs = fig.add_gridspec( 2, 2 )\n",
+    "    ax1 = fig.add_subplot( gs[0, 0] )\n",
+    "    ax2 = fig.add_subplot( gs[0, 1] )\n",
+    "    ax3 = fig.add_subplot( gs[1, 0] )\n",
+    "    ax4 = fig.add_subplot( gs[1, 1] )\n",
+    "    \n",
+    "    ax1.set_title( 'isomap' )\n",
+    "    ax2.set_title( 'lle' )\n",
+    "    ax3.set_title( 'laplace' )\n",
+    "    ax4.set_title( 'ltsa' )\n",
     "    \n",
     "    x1_vals = y_isomap[:, 0]\n",
     "    y1_vals = y_isomap[:, 1]\n",
     "    ax1.scatter( x1_vals, y1_vals, c=y )\n",
+    "    ax1.set_xticklabels( [] )\n",
+    "    ax1.set_yticklabels( [] )\n",
     "    \n",
     "    x2_vals = y_lle[:, 0]\n",
     "    y2_vals = y_lle[:, 1] \n",
     "    ax2.scatter( x2_vals, y2_vals, c=y )\n",
+    "    ax2.set_xticklabels( [] )\n",
+    "    ax2.set_yticklabels( [] )\n",
     "    \n",
     "    x3_vals = y_laplace[:, 0]\n",
     "    y3_vals = y_laplace[:, 1]\n",
     "    ax3.scatter( x3_vals, y3_vals, c=y )\n",
+    "    ax3.set_xticklabels( [] )\n",
+    "    ax3.set_yticklabels( [] )\n",
     "    \n",
     "    x4_vals = y_ltsa[:, 0]\n",
     "    y4_vals = y_ltsa[:, 1]\n",
     "    ax4.scatter( x4_vals, y4_vals, c=y )\n",
-    "    \n",
-    "    plt.plot()\n",
+    "    ax4.set_xticklabels( [] )\n",
+    "    ax4.set_yticklabels( [] )\n",
+    "\n",
+    "    plt.show()\n",
     "    return (y_isomap, y_lle, y_laplace, y_ltsa)\n",
     "    \n",
     "def residual_variance( dx, dy ):\n",
@@ -132,13 +145,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "850dcad070de4e558176f4fe676b361e",
+       "model_id": "974c5977dce34a1d9ad8f55ce4385bfd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -156,10 +169,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "color_iter = itertools.cycle(['purple', 'blue'])\n",
+    "\n",
+    "def plot_results(X, Y_, means, covariances, index, title):\n",
+    "    fig = plt.figure()\n",
+    "    splot = fig.add_subplot()\n",
+    "    for i, (mean, covar, color) in enumerate(zip(\n",
+    "            means, covariances, color_iter)):\n",
+    "        v, w = linalg.eigh(covar)\n",
+    "        v = 2. * np.sqrt(2.) * np.sqrt(v)\n",
+    "        u = w[0] / linalg.norm(w[0])\n",
+    "        # as the DP will not use every component it has access to\n",
+    "        # unless it needs it, we shouldn't plot the redundant\n",
+    "        # components.\n",
+    "        if not np.any(Y_ == i):\n",
+    "            continue\n",
+    "        plt.scatter(X[Y_ == i, 0], X[Y_ == i, 1], .8, color=color)\n",
+    "\n",
+    "        # Plot an ellipse to show the Gaussian component\n",
+    "        angle = np.arctan(u[1] / u[0])\n",
+    "        angle = 180. * angle / np.pi  # convert to degrees\n",
+    "        ell = mpl.patches.Ellipse(mean, v[0], v[1], 180. + angle, color=color)\n",
+    "        ell.set_clip_box(splot.bbox)\n",
+    "        ell.set_alpha(0.5)\n",
+    "        splot.add_artist(ell)\n",
+    "    plt.xticks(())\n",
+    "    plt.yticks(())\n",
+    "    plt.title(title)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "80ee03bb34824f4c9d961235b7a4810e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "29198e10f29f4cd3bbf95f2b2ed14e81",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a839d7c0df0d4fb28e0b32e3b594f2d8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bfe634f40b6f4865a3600a4cd09a25d0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "gmm = mixture.GaussianMixture( n_components=2, covariance_type='full' )\n",
+    "\n",
+    "gmm.fit( y_isomap )\n",
+    "plot_results( y_isomap, gmm.predict( y_isomap ), gmm.means_, gmm.covariances_, 0, 'Isomap' )\n",
+    "\n",
+    "gmm.fit( y_lle )\n",
+    "plot_results( y_lle, gmm.predict( y_lle ), gmm.means_, gmm.covariances_, 0, 'LLE' )\n",
+    "\n",
+    "gmm.fit( y_laplace )\n",
+    "plot_results( y_laplace, gmm.predict( y_laplace ), gmm.means_, gmm.covariances_, 0, 'Laplace' )\n",
+    "\n",
+    "gmm.fit( y_ltsa )\n",
+    "plot_results( y_ltsa, gmm.predict( y_ltsa ), gmm.means_, gmm.covariances_, 0, 'LTSA' )"
+   ]
   }
  ],
  "metadata": {
