--- a/s_curve.ipynb
+++ b/s_curve.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "%matplotlib widget\n",
-    "from sklearn import datasets, manifold, mixture\n",
+    "from sklearn import datasets, manifold, mixture, metrics\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib as mpl\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
@@ -56,7 +56,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "43ca1bedf92847148ff2ae0e3ca02b58",
+       "model_id": "1e414682483a43aabaacf46ea5bdd80a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,13 +145,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "974c5977dce34a1d9ad8f55ce4385bfd",
+       "model_id": "cb3b880158544618889c46d585450508",
        "version_major": 2,
        "version_minor": 0
       },
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,55 +204,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "80ee03bb34824f4c9d961235b7a4810e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "29198e10f29f4cd3bbf95f2b2ed14e81",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a839d7c0df0d4fb28e0b32e3b594f2d8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bfe634f40b6f4865a3600a4cd09a25d0",
+       "model_id": "c7edfd58c0c547bdb42148e66433d996",
        "version_major": 2,
        "version_minor": 0
       },
@@ -270,14 +228,42 @@
     "gmm.fit( y_isomap )\n",
     "plot_results( y_isomap, gmm.predict( y_isomap ), gmm.means_, gmm.covariances_, 0, 'Isomap' )\n",
     "\n",
-    "gmm.fit( y_lle )\n",
-    "plot_results( y_lle, gmm.predict( y_lle ), gmm.means_, gmm.covariances_, 0, 'LLE' )\n",
+    "# gmm.fit( y_lle )\n",
+    "# plot_results( y_lle, gmm.predict( y_lle ), gmm.means_, gmm.covariances_, 0, 'LLE' )\n",
     "\n",
-    "gmm.fit( y_laplace )\n",
-    "plot_results( y_laplace, gmm.predict( y_laplace ), gmm.means_, gmm.covariances_, 0, 'Laplace' )\n",
+    "# gmm.fit( y_laplace )\n",
+    "# plot_results( y_laplace, gmm.predict( y_laplace ), gmm.means_, gmm.covariances_, 0, 'Laplace' )\n",
     "\n",
-    "gmm.fit( y_ltsa )\n",
-    "plot_results( y_ltsa, gmm.predict( y_ltsa ), gmm.means_, gmm.covariances_, 0, 'LTSA' )"
+    "# gmm.fit( y_ltsa )\n",
+    "# plot_results( y_ltsa, gmm.predict( y_ltsa ), gmm.means_, gmm.covariances_, 0, 'LTSA' )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9760960971535391"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "true_labels = []\n",
+    "for c in y:\n",
+    "    if c == 'purple':\n",
+    "        true_labels.append( 0 )\n",
+    "    else:\n",
+    "        true_labels.append( 1 )\n",
+    "\n",
+    "true_labels.reverse()\n",
+    "metrics.adjusted_rand_score( true_labels, gmm.predict( y_isomap ) )"
    ]
   }
  ],
